src/test/deca/codegen/valid/objet/doubleAssign.deca
/* Description:
    Declaration d'un class

    Historique:
      cree le 16/01/2020
    Sortie attendu:
	3

*/


{
	int a = 1;
	int x;
	x = (a = 2);
	println(x);
}
