src/test/deca/codegen/invalid/printSansInit.deca
/* Description:
    Declaration d'un class

    Historique:
      cree le 16/01/2020
    Sortie attendu:
	3

*/


{
	int x;
	println(x);
}
